--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
-.App {
-  text-align: center;
+
+body{
+  background-color:ivory;
+}
+nav{
+  display:flex;
+  justify-content: space-between;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:10vh;
+  margin-bottom:5vh;
+}
+nav > *{
+  margin-left:20px;
+  margin-right:20px;
+}
+.objects{
+  background-color:red;
+  color:white;
+  margin-top:-10px;
+  margin-left:-10px;
+  border-radius:50%;
+  height:20px;
+  width:20px;
+  padding:3px;
+  text-align:center;
+  
+}
+nav h1,i{
+  text-decoration: none;
+  color:white;
+}
+.cart h1{
+  margin:0px;
+}
+.cart{
+  display:flex;
+  margin-bottom:10px;
+  margin:20px;
+
+}
+.cart-list{
+  display:flex;
+  flex-wrap:wrap;
+}
+.cart-it{
+  display:flex;
+  width:400px;
+ 
+  bordeR:5px solid black;
+  margin:20px;
+}
+.cart-it .info{
+  display:flex;
+  flex-direction:column;
+  justify-content:space-between;
+  align-items:center;
+  overflow:hidden;
+  text-align:center;
+}
+.cart-it > div{
+  width:50%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.cart-it > div > img{
+  width:100%;
+  height:100%;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.cart-it  span{
+  padding-right:10px;
+  padding-left:10px;
+  border:1px solid black;
+  
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.add{
+ cursor:pointer;
+  background-color:black;
+  color:white;
+  width:30px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sub{
+  cursor:pointer;
+  width:30px;
+  background-color:black;
+  color:white;
+}
+.card{
+  width:250px;
+  border:5px solid black;
+  border-radius:5px;
+  margin:20px;
+  display:flex;
+  flex-direction:column;
+  justify-content:space-between;
+  text-align:center;
+  background-color:#222;
+  color:white;
+}
+.card > img{
+  width:100%;
+  height:250px;
+}
+.items{
+  height:80vh;
+  margin-top:15vh;
+  display:flex;
+  flex-wrap:wrap;
+  overflow-y:auto;
+  
+  
+}
+.card > button{
+  width:100%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  position:relative;
+  bottom:0;
+}
+button{
+  background-color:rgb(203, 238, 158);
+  border:1px solid black;
+  padding-top:10px;
+  padding-bottom: 10px;
 }
